Make small change just for testing in preparation for starting the site.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ home: true
 <section>
 
     <header>
-        <h2>About the project</h2>
+        <h2>Make one more change !!!</h2>
     </header>
 
     <div class="content">
