--- a/gallery.html
+++ b/gallery.html
@@ -39,6 +39,11 @@ permalink: /gallery/
                     <span><img src="https://images.unsplash.com/photo-1563253746-350a0a877afa?ixlib=rb-1.2.1&auto=format&fit=crop&w=350&q=80" alt=""></span>
                 </a>
             </li>
+            <li>
+                <a href="#">
+                    <span><img src="https://images.unsplash.com/photo-1563253746-350a0a877afa?ixlib=rb-1.2.1&auto=format&fit=crop&w=350&q=80" alt=""></span>
+                </a>
+            </li>
         </ul>
             
     </div>
