Finishing the Our Team page.

--- a/team.html
+++ b/team.html
@@ -8,58 +8,109 @@ permalink: /ourteam/
 <section>
     <div class="content">
         <h3 class="subtitle">That will make it happen...</h3>
-        
+
         <ul class="gallery">
-            <li>
-                <a href="">
-                    <span><img src="https://images.unsplash.com/photo-1505503693641-1926193e8d57?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=60" alt=""></span>
+            <li id="one">
+                <div class="name">Job Ivanov</div>
+                <a href="#one">
+                    <span><img
+                            src="https://images.unsplash.com/photo-1505503693641-1926193e8d57?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80"
+                            alt=""></span>
                 </a>
                 <div class="job">Job</div>
                 <div class="info">Sone Info about the person that fdkfkd wssllld dddss.</div>
             </li>
-            <li>
-                <a href="">
-                    <span><img src="https://images.unsplash.com/photo-1528892952291-009c663ce843?ixlib=rb-1.2.1&auto=format&fit=crop&w=350&q=60" alt=""></span>
+            <li id="two">
+                <div class="name">Job Ivanov</div>
+                <a href="#two">
+                    <span><img
+                            src="https://images.unsplash.com/photo-1557612083-4b87d90dd7c1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80"
+                            alt=""></span>
+                </a>
+                <div class="job">Job</div>
+                <div class="info">Sone Info arsrson tn that fdkfkd d wssllld dddss.</div>
+            </li>
+            <li id="tree">
+                <div class="name">Job Ivanov</div>
+                <a href="#tree">
+                    <span><img
+                            src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80"
+                            alt=""></span>
                 </a>
                 <div class="job">Job</div>
                 <div class="info">Sone Info about the person that fdkfkd wssllld dddss.</div>
             </li>
-            <li>
-                <a href="">
-                    <span><img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=60" alt=""></span>
+            <li id="four">
+                <div class="name">Job Ivanov</div>
+                <a href="#four">
+                    <span><img
+                            src="https://images.unsplash.com/photo-1557265193-56758b5a2f7f?ixlib=rb-1.2.1&auto=format&fit=crop&w=350&q=80"
+                            alt=""></span>
                 </a>
                 <div class="job">Job</div>
                 <div class="info">Sone Info about the person that fdkfkd wssllld dddss.</div>
             </li>
-            <li>
-                <a href="">
-                    <span><img src="https://images.unsplash.com/photo-1520409364224-63400afe26e5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=60" alt=""></span>
+            <li id="five">
+                <div class="name">Job Ivanov</div>
+                <a href="#five">
+                    <span><img
+                            src="https://images.unsplash.com/photo-1450297350677-623de575f31c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80"
+                            alt=""></span>
                 </a>
                 <div class="job">Job</div>
                 <div class="info">Sone Info about the person that fdkfkd wssllld dddss.</div>
             </li>
-            <li>
-                <a href="">
-                    <span><img src="https://images.unsplash.com/photo-1450297350677-623de575f31c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=60" alt=""></span>
+            <li id="six">
+                <div class="name">Job Ivanov</div>
+                <a href="#six">
+                    <span><img
+                            src="https://images.unsplash.com/photo-1554949886-1275d4fe6699?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80"
+                            alt=""></span>
                 </a>
                 <div class="job">Job</div>
                 <div class="info">Sone Info about the person that fdkfkd wssllld dddss.</div>
             </li>
-            <li>
-                <a href="">
-                    <span><img src="https://images.unsplash.com/photo-1529112403919-76c387f7ebf7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=60" alt=""></span>
+            <li id="seven">
+                <div class="name">Job Ivanov</div>
+                <a href="#seven">
+                    <span><img
+                            src="https://images.unsplash.com/photo-1524492926121-4723520d78d9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80"
+                            alt=""></span>
                 </a>
                 <div class="job">Job</div>
                 <div class="info">Sone Info about the person that fdkfkd wssllld dddss.</div>
             </li>
-            <li>
-                <a href="">
-                    <span><img src="https://images.unsplash.com/photo-1524492926121-4723520d78d9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=60" alt=""></span>
+            <li id="eight">
+                <div class="name">Job Ivanov</div>
+                <a href="#eight">
+                    <span><img
+                            src="https://images.unsplash.com/photo-1538384690625-e2e7bcf9e402?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80"
+                            alt=""></span>
+                </a>
+                <div class="job">Job</div>
+                <div class="info">Sone Info about the person that fdkfkd wssllld dddss.</div>
+            </li>
+            <li id="nine">
+                <div class="name">Job Ivanov</div>
+                <a href="#nine">
+                    <span><img
+                            src="https://images.unsplash.com/photo-1555001652-38dc6d28a9d4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80"
+                            alt=""></span>
+                </a>
+                <div class="job">Job</div>
+                <div class="info">Sone Info about the person that fdkfkd wssllld dddss.</div>
+            </li>
+            <li id="ten">
+                <div class="name">Job Ivanov</div>
+                <a href="#ten">
+                    <span><img
+                            src="https://images.unsplash.com/photo-1549738712-da3cb334e1d2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80"
+                            alt=""></span>
                 </a>
                 <div class="job">Job</div>
                 <div class="info">Sone Info about the person that fdkfkd wssllld dddss.</div>
             </li>
         </ul>
-            
+
     </div>
 </section>
