Some changes in navigation and team page

--- a/team.html
+++ b/team.html
@@ -1,7 +1,7 @@
 ---
 layout: main
 title: Our Team
-<!-- icon: fa-grip-horizontal -->
+icon: fas fa-users
 permalink: /ourteam/
 ---
 
@@ -17,7 +17,7 @@ permalink: /ourteam/
                             src="https://images.unsplash.com/photo-1505503693641-1926193e8d57?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80"
                             alt=""></span>
                 </a>
-                <div class="job">Job</div>
+                <div class="job">Job <i class="fab fa-linkedin"> <i class="fab fa-github-square"></i> <i class="fas fa-envelope"></i></i></div>
                 <div class="info">Sone Info about the person that fdkfkd wssllld dddss.</div>
             </li>
             <li id="two">
