--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 layout: main
-title: About
+title: About Us
 icon: fa-id-card-alt
 sidebar: 1
 permalink: /about/
@@ -14,10 +14,5 @@ permalink: /about/
 
     <div class="content">
         
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Partim cursu et peragratione laetantur, congregatione aliae coetum quodam modo civitatis imitantur; Mihi quidem Antiochum, quem audis, satis belle videris attendere. Et quidem, inquit, vehementer errat; Quia dolori non voluptas contraria est, sed doloris privatio. Duo Reges: constructio interrete. Immo alio genere; Animi enim quoque dolores percipiet omnibus partibus maiores quam corporis. An nisi populari fama?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Partim cursu et peragratione laetantur, congregatione aliae coetum quodam modo civitatis imitantur; Mihi quidem Antiochum, quem audis, satis belle videris attendere. Et quidem, inquit, vehementer errat; Quia dolori non voluptas contraria est, sed doloris privatio. Duo Reges: constructio interrete. Immo alio genere; Animi enim quoque dolores percipiet omnibus partibus maiores quam corporis. An nisi populari fama?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Partim cursu et peragratione laetantur, congregatione aliae coetum quodam modo civitatis imitantur; Mihi quidem Antiochum, quem audis, satis belle videris attendere. Et quidem, inquit, vehementer errat; Quia dolori non voluptas contraria est, sed doloris privatio. Duo Reges: constructio interrete. Immo alio genere; Animi enim quoque dolores percipiet omnibus partibus maiores quam corporis. An nisi populari fama?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Partim cursu et peragratione laetantur, congregatione aliae coetum quodam modo civitatis imitantur; Mihi quidem Antiochum, quem audis, satis belle videris attendere. Et quidem, inquit, vehementer errat; Quia dolori non voluptas contraria est, sed doloris privatio. Duo Reges: constructio interrete. Immo alio genere; Animi enim quoque dolores percipiet omnibus partibus maiores quam corporis. An nisi populari fama?</p>
-            
     </div>
 </section>
