--- a/news.html
+++ b/news.html
@@ -8,7 +8,7 @@ permalink: /news/
 <section>
 
     <header>
-        <h2>Latest Posts</h2>
+        <h2>Latest News</h2>
     </header>
 
     <div class="content">
