--- a/team.html
+++ b/team.html
@@ -7,6 +7,7 @@ permalink: /ourteam/
 
 <section>
     <div class="content">
+        <h1>The Team</h1>
         <h3 class="subtitle">That will make it happen...</h3>
 
         <ul class="gallery">
