--- a/tokensale.html
+++ b/tokensale.html
@@ -5,31 +5,62 @@ icon: fas fa-coins
 permalink: /tokensale/
 ---
 
-<h3>The best token economics for the "Best Coin"</h3>
-<p>Here is what we offer:</p>
+<h2 class="tokensale-main-heading">The best token economics for the "Best Coin"</h2>
+<h3 class="tokensale-second-heading">We mint ONLY 99,999,999 "Best Coin" tokens. Take part of our sale today!!! And get
+    rich fast.</h3>
+<h3 class="tokensale-second-heading">Before is to late !!!</h3>
+<h4 class="tokensale-second-info">Bonus is for every 1,000,000 tokens sold then it is GONE.</h4>
 
 <div class="tokensale-container">
     <div class="tokensale-card">
         <header>
-            <h4>Pre Sale Tokens</h4>
-            <p>Valid 23/02/2019</p>
+            <h4>Pre Private Sale</h4>
+            <p>Valid till: 23/02/2019</p>
         </header>
 
         <main>
-            <h4>1 ETH = 250 Best Coins</h4>
+            <h4>1 ETH = 1000 Best Coins</h4>
             <ul>
-                <li>
+                <li class="dashed">
+                    up to 70% bonus
+                </li>
+                <li class="dashed">
+                    up to 50% bonus
+                </li>
+                <li class="dashed">
+                    up to 30% bonus
+                </li>
+            </ul>
+            <h3>
+                Bonus run out FAST. Only 1,000,000 tokens each!!!
+            </h3>
+        </main>
+        <footer>
+            <a class="disabled">Buy Now</a>
+        </footer>
+    </div>
+
+    <div class="tokensale-card">
+        <header>
+            <h4>Private Sale</h4>
+            <p>Valid 23/03/2019</p>
+        </header>
+
+        <main>
+            <h4>1 ETH = 900 Best Coins</h4>
+            <ul>
+                <li class="dashed">
                     up to 70% bonus
                 </li>
                 <li>
                     up to 50% bonus
                 </li>
                 <li>
-                    up to 40% bonus
+                    up to 30% bonus
                 </li>
             </ul>
             <h3>
-                Bonus is for every 1,000,000 tokens sold
+                Bonus run out FAST. Only 1,000,000 tokens each!!!
             </h3>
         </main>
         <footer>
@@ -39,12 +70,12 @@ permalink: /tokensale/
 
     <div class="tokensale-card">
         <header>
-            <h4>Pre Sale Tokens</h4>
-            <p>Valid 23/02/2019</p>
+            <h4>Regular Sale</h4>
+            <p>Valid 23/04/2019</p>
         </header>
 
         <main>
-            <h4>1 ETH = 250 Best Coins</h4>
+            <h4>1 ETH = 800 Best Coins</h4>
             <ul>
                 <li>
                     up to 70% bonus
@@ -53,11 +84,11 @@ permalink: /tokensale/
                     up to 50% bonus
                 </li>
                 <li>
-                    up to 40% bonus
+                    up to 30% bonus
                 </li>
             </ul>
             <h3>
-                Bonus is for every 1,000,000 tokens sold
+                Bonus run out FAST. Only 1,000,000 tokens each!!!
             </h3>
         </main>
         <footer>
@@ -67,12 +98,12 @@ permalink: /tokensale/
 
     <div class="tokensale-card">
         <header>
-            <h4>Pre Sale Tokens</h4>
-            <p>Valid 23/02/2019</p>
+            <h4>After Regular Sale</h4>
+            <p>Valid 23/05/2019</p>
         </header>
 
         <main>
-            <h4>1 ETH = 250 Best Coins</h4>
+            <h4>1 ETH = 700 Best Coins</h4>
             <ul>
                 <li>
                     up to 70% bonus
@@ -81,11 +112,11 @@ permalink: /tokensale/
                     up to 50% bonus
                 </li>
                 <li>
-                    up to 40% bonus
+                    up to 30% bonus
                 </li>
             </ul>
             <h3>
-                Bonus is for every 1,000,000 tokens sold
+                Bonus run out FAST. Only 1,000,000 tokens each!!!
             </h3>
         </main>
         <footer>
@@ -95,12 +126,12 @@ permalink: /tokensale/
 
     <div class="tokensale-card">
         <header>
-            <h4>Pre Sale Tokens</h4>
-            <p>Valid 23/02/2019</p>
+            <h4>Final Sale</h4>
+            <p>Valid 23/06/2019</p>
         </header>
 
         <main>
-            <h4>1 ETH = 250 Best Coins</h4>
+            <h4>1 ETH = 500 Best Coins</h4>
             <ul>
                 <li>
                     up to 70% bonus
@@ -109,39 +140,11 @@ permalink: /tokensale/
                     up to 50% bonus
                 </li>
                 <li>
-                    up to 40% bonus
+                    up to 30% bonus
                 </li>
             </ul>
             <h3>
-                Bonus is for every 1,000,000 tokens sold
-            </h3>
-        </main>
-        <footer>
-            <a>Buy Now</a>
-        </footer>
-    </div>
-
-    <div class="tokensale-card">
-        <header>
-            <h4>Pre Sale Tokens</h4>
-            <p>Valid 23/02/2019</p>
-        </header>
-
-        <main>
-            <h4>1 ETH = 250 Best Coins</h4>
-            <ul>
-                <li>
-                    up to 70% bonus
-                </li>
-                <li>
-                    up to 50% bonus
-                </li>
-                <li>
-                    up to 40% bonus
-                </li>
-            </ul>
-            <h3>
-                Bonus is for every 1,000,000 tokens sold
+                Bonus run out FAST. Only 1,000,000 tokens each!!!
             </h3>
         </main>
         <footer>
