Finish Team and TokenSale Pages

--- a/tokensale.html
+++ b/tokensale.html
@@ -15,7 +15,7 @@ permalink: /tokensale/
     <div class="tokensale-card">
         <header>
             <h4>Pre Private Sale</h4>
-            <p>Valid till: 23/02/2019</p>
+            <p>Valid until: 23/02/2019</p>
         </header>
 
         <main>
@@ -43,7 +43,7 @@ permalink: /tokensale/
     <div class="tokensale-card">
         <header>
             <h4>Private Sale</h4>
-            <p>Valid 23/03/2019</p>
+            <p>Valid until: 23/03/2019</p>
         </header>
 
         <main>
@@ -71,7 +71,7 @@ permalink: /tokensale/
     <div class="tokensale-card">
         <header>
             <h4>Regular Sale</h4>
-            <p>Valid 23/04/2019</p>
+            <p>Valid until: 23/04/2019</p>
         </header>
 
         <main>
@@ -99,7 +99,7 @@ permalink: /tokensale/
     <div class="tokensale-card">
         <header>
             <h4>After Regular Sale</h4>
-            <p>Valid 23/05/2019</p>
+            <p>Valid until: 23/05/2019</p>
         </header>
 
         <main>
@@ -127,7 +127,7 @@ permalink: /tokensale/
     <div class="tokensale-card">
         <header>
             <h4>Final Sale</h4>
-            <p>Valid 23/06/2019</p>
+            <p>Valid until: 23/06/2019</p>
         </header>
 
         <main>
