--- a/about.html
+++ b/about.html
@@ -9,10 +9,27 @@ permalink: /about/
 <section>
 
     <header>
-        <h2>Even more about the project</h2>
+
     </header>
 
     <div class="content">
-        
+        <div class="about-wrapper">
+            <div class="about-info">
+                <h3>Even more about the project</h3>
+                <ul>
+                    <li>Sofia, Bulgaria</li>
+                    <li>kv. Slatina</li>
+                    <li>Kamchiq, 15-17</li>
+                    <li>Tintyava Street, floor 1</li>
+                    <li>Best Coin Ltd.</li>
+                    <li>Post code: 1113</li>
+                    <li>email: BestCoinBaby@com</li>
+                    <li>phone: 0888 888 888</li>
+                    <li>Sunday: 09:00 - 09:20</li>
+                </ul>
+            </div>
+            <div class="about-map"></div>
+        </div>
+        <p class="about-btn-p"><a class="about-btn">Contact Us</a></p>
     </div>
 </section>
