Fix some bugs before starting with landing page

--- a/index.html
+++ b/index.html
@@ -6,13 +6,8 @@ layout: main
 home: true
 ---
 
-<section>
+<section class="index-main">
 
-    <header>
-        <h2>Best Coin is here for all of us !!!</h2>
-    </header>
+    <p>sdsds</p>
 
-    <div class="content">
-                    
-    </div>
 </section>
