--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@ icon: fa-rss
 permalink: /news/
 ---
 
-<section>
+<section class="news-main">
 
     <header>
         <h1 class="main-news-heading">Latest News</h1>
