--- a/team.html
+++ b/team.html
@@ -1,11 +1,11 @@
 ---
 layout: main
-title: Our Team
+title: Team
 icon: fas fa-users
 permalink: /ourteam/
 ---
 
-<section>
+<section class="team-content">
     <div class="content">
         <h1>The Team</h1>
         <h3 class="subtitle">That will make it happen...</h3>
