Almost ready Landing Page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,78 @@ home: true
 ---
 
 <section class="index-main">
+    <div class="index-container">
 
-    <p>sdsds</p>
+        <header>
+            <div class="main-pic">
+
+            </div>
+            <h2>We are Building the new future of money !!!</h2>
+            <h3>Believe us...</h3>
+        </header>
+
+        <main>
+            <div class="features">
+                <div class="features-container">
+                    <ul>
+                        <li>
+                            <i class="fab fa-angellist"></i>
+                            <h3>Best Team</h3>
+                            <p>We have the best team that will make it happen for all of us.</p>
+                        </li>
+                        <li>
+                            <i class="fas fa-american-sign-language-interpreting"></i>
+                            <h3>Great Partnerships</h3>
+                            <p>Partnerships that will blow of your head. Seriously.</p>
+                        </li>
+                        <li>
+                            <i class="fas fa-balance-scale"></i>
+                            <h3>Balanced Tokenomics</h3>
+                            <p>We sell whooping 9% of our tokes. That is generously.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </main>
+
+        <div class="main-elements">
+            <div class="single-element">
+                <div class="element-info">
+                    <h2>Helooo grom here</h2>
+                    <p>The best, ftodn here alsno The best, ftodn here alsno </p>
+                </div>
+                <div class="element-media pic1"></div>
+            </div>
+            <div class="single-element">
+                <div class="element-media pic2"></div>
+                <div class="element-info">
+                    <h2>Helooo grom here</h2>
+                    <p>The best, ftodn here alsno The best, ftodn here alsno </p>
+                </div>
+            </div>
+            <div class="single-element">
+                <div class="element-info">
+                    <h2>Helooo grom here</h2>
+                    <p>The best, ftodn here alsno The best, ftodn here alsno </p>
+                </div>
+                <div class="element-media pic3"></div>
+            </div>
+
+            <div class="single-element">
+                <div class="element-media pic4"></div>
+                <div class="element-info">
+                    <h2>Helooo grom here</h2>
+                    <p>The best, ftodn here alsno The best, ftodn here alsno </p>
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            <div class="contact-us">
+
+            </div>
+        </footer>
+
+    </div>
 
 </section>
