--- a/index.html
+++ b/index.html
@@ -44,22 +44,25 @@ home: true
         <div class="main-elements">
             <div class="single-element">
                 <div class="element-info">
-                    <h2>Helooo grom here</h2>
-                    <p>The best, ftodn here alsno The best, ftodn here alsno </p>
+                    <h2>Dont gamble you money</h2>
+                    <p>You dont have to gamble you hard earn money. We are 100% sure to WIN. Invest in us and get rich
+                        quick!</p>
                 </div>
                 <div class="element-media pic1"></div>
             </div>
             <div class="single-element">
                 <div class="element-media pic2"></div>
                 <div class="element-info">
-                    <h2>Helooo grom here</h2>
-                    <p>The best, ftodn here alsno The best, ftodn here alsno </p>
+                    <h2>"Best Coin" is better than Gold</h2>
+                    <p>Our project is faster for transfer, better store of value, easy divisible and with greath vision
+                        for the future.</p>
                 </div>
             </div>
             <div class="single-element">
                 <div class="element-info">
-                    <h2>Helooo grom here</h2>
-                    <p>The best, ftodn here alsno The best, ftodn here alsno </p>
+                    <h2>Fastest token up to date</h2>
+                    <p>Our blockchain is the fastest in the world. Just 0.2 sec for confirmation. No one can beat that.
+                    </p>
                 </div>
                 <div class="element-media pic3"></div>
             </div>
@@ -67,14 +70,21 @@ home: true
             <div class="single-element">
                 <div class="element-media pic4"></div>
                 <div class="element-info">
-                    <h2>Helooo grom here</h2>
-                    <p>The best, ftodn here alsno The best, ftodn here alsno </p>
+                    <h2>Most secure ever</h2>
+                    <p>Most secure blockchain ever build is here. No one can touch it. Абе яката работа.</p>
                 </div>
             </div>
         </div>
 
         <footer>
             <div class="contact-us">
+                <h3 class="footer-info">
+                    Dont wait! Contact us now! Limited time offer!
+                </h3>
+                <div class="footer-form">
+                    <input type="email" placeholder="Enter your email..." >
+                    <a href="" id="money-btn">GIVE US MONEY</a>
+                </div>
 
             </div>
         </footer>
